--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Earth</title>
+    <title>Earthquake Checker - Live Earthquake Heat Map</title>
+    <meta name="description" content="Earthquake Checker collects earthquake data from USGS, shows these information on a 3D earth model with graphical analysis. " />
     <style>
 
         .diagramHeader {
@@ -20,7 +21,7 @@
 
     </style>
 
-    <link rel='icon' href='img/logo_black.ico' type=‘image/x-ico’>
+    <link rel='icon' href='img/logo_black.ico' type='image/x-ico' title='Earthquake Checker Small Logo' >
     <script src="js/resource/jquery.min.js"></script>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <script src="js/resource/bootstrap.min.js"></script>
@@ -44,7 +45,8 @@
 </head>
 <body>
 
-<img id="smallIcon" src="img/logo.png">
+<img id="smallIcon" src="img/logo.png" title="Small Earthquake Checker Logo" alt="Small Logo of Earthquake Checker website">
+
 
 <nav id="hideNav">
     <h2></h2>
@@ -64,7 +66,7 @@
 <div id="curtain"></div>
 
 <aside>
-    <img src="img/logo.png">
+    <img src="img/logo.png" title="Earthquake Checker Logo" alt="Logo of Earthquake Checker website">
     <h2></h2>
     <input type="text" placeholder="">
     <button id="button1" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#modal"></button>
